--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -77,7 +77,7 @@
 
     <div id="app" class="splash-active">
         <div class="splash-content">
-            <h1 class="splash-title">NextUI Installation Tool</h1>
+            <h1 class="splash-title">NextUI Setup Wizard</h1>
         </div>
     </div>
 
