Consolidate SD card and ADB versions of Bios and Rom pages

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -89,6 +89,7 @@
     </div>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
+    <script src="js/toolbox.js"></script>
 
 </body>
 
